--- a/demo-applicationset.yml
+++ b/demo-applicationset.yml
@@ -27,6 +27,8 @@ spec:
         server: '{{url}}'
         namespace: '{{namespace}}'
       syncPolicy:
+        syncOptions:
+          - CreateNamespace=true
         automated:
           prune: true
           selfHeal: true
